Improve card animation.

--- a/source/index2.html
+++ b/source/index2.html
@@ -3,20 +3,13 @@ layout: default
 title:
 ---
 
-<main role="main" class=""> <!-- main content starts here -->
+<main role="main" class="">
   <div class="card2-list">
-      <div class="card2 js-card2-trigger js-card2-collapsed">
-        <div class="card2__inner card2-animation">
-          <p>Text</p>
-        </div>
+    <div class="card2 card2-collapsed">
+      <div class="card2__inner">
+        <p>Text</p>
       </div>
-
-      <div class="card2 js-card2-trigger js-card2-collapsed">
-        <div class="card2__inner">
-          <p>Text</p>
-        </div>
-      </div>
-      
+    </div>
   </div>
 </main>
 
