Fix card animation.

--- a/source/index2.html
+++ b/source/index2.html
@@ -4,7 +4,25 @@ title:
 ---
 
 <main role="main" class="">
-  <div class="card2-list">
+  <div class="card2-row">
+    <div class="card2 card2-collapsed">
+      <div class="card2__inner">
+        <p>Text</p>
+      </div>
+    </div>
+
+    <div class="card2 card2-collapsed">
+      <div class="card2__inner">
+        <p>Text</p>
+      </div>
+    </div>
+
+    <div class="card2 card2-collapsed">
+      <div class="card2__inner">
+        <p>Text</p>
+      </div>
+    </div>
+
     <div class="card2 card2-collapsed">
       <div class="card2__inner">
         <p>Text</p>
