--- a/source/index.html
+++ b/source/index.html
@@ -4,20 +4,28 @@ title:
 ---
 
 <main role="main" class=""> <!-- main content starts here -->
-  {% for i in site.data.projects %}
-    <div class="divider">
-      <h1>{{i.category_name}}</h1>
-    </div>
+  <div class="divider">
+    <h1>Simple cards</h1>
+  </div>
 
-    <div class="card2-row">
-      {% for j in i.projects %}
-        <div class="card-container">
-          <div class="card2 card2-collapsed">
-            <p>Text</p>
+  <div class="card-row">
+    {% for i in (1..41) %}
+      <article class="card-container ">
+        <div class="card card-collapsed card--main-color">
+          <div class="card__content">
+            <section class="card__summary">
+              <h3>Title of this card</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit aperiam obcaecati, magnam sit aut optio, sed! Illo magni sequi alias, temporibus hic quidem, ratione sed dignissimos suscipit, earum at culpa.</p>    
+            </section>
+            <section class="card__extra-content">
+              <h3>Title of this card</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit aperiam obcaecati, magnam sit aut optio, sed! Illo magni sequi alias, temporibus hic quidem, ratione sed dignissimos suscipit, earum at culpa.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit aperiam obcaecati, magnam sit aut optio, sed! Illo magni sequi alias, temporibus hic quidem, ratione sed dignissimos suscipit, earum at culpa.</p>
+            </section>
           </div>
         </div>
-      {% endfor %}
-    </div>
-  {% endfor %}
+      </article>
+    {% endfor %}
+  </div>
 </main>
 
